--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portfolio</title>
 </head>
 <body>
 
@@ -57,27 +57,27 @@
         <main>
             <ul>
                 <li>
-                    <img src="/img/TechNo.jpg" alt="">
+                    <img src="./img/techno.jpg" alt="">
                     <p>Технокряк</p>
                     <a href="">Веб-сайт</a>
                 </li>
                 <li>
-                    <img src="/img/Design.jpg" alt="">
-                    <p>Постер New Orlean vs Golden Star</p>
+                    <img src="./img/design.jpg" alt="">
+                    <p>Постер <span>New Orlean vs Golden Star</span></p>
                     <a href="">Дизайн</a>
                 </li>
                 <li>
-                    <img src="/img/Seafood.jpg" alt="">
-                    <p>Ресторан Seafood</p>
+                    <img src="./img/seafood.jpg" alt="">
+                    <p>Ресторан<span>Seafood</span></p>
                     <a href="">Приложение</a>
                 </li>
                 <li>
-                    <img src="/img/Prime.jpg" alt="">
+                    <img src="./img/prime.jpg" alt="">
                     <p>Проект Prime</p>
                     <a href="">Маркетинг</a>
                 </li>
                 <li>
-                    <img src="/img/Boxes.jpg" alt="">
+                    <img src="./img/boxes.jpg" alt="">
                     <p>Проект Boxes</p>
                     <a href="">Приложение</a>
                 </li>
@@ -110,9 +110,9 @@
         </a>
         <address>
             <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
+                <li><a href="https://goo.gl/maps/Gu5Dw9EAoeBzcQZ39">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="meilto:info@example.com">info@example.com</a></li>
-                <li><a href="+380991111111">+38 099 111 11 11</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
     
         </address>
