--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -28,7 +33,7 @@
             <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
-      
+
         <!-- Навигация Портфолио -->
 
         <nav>
@@ -37,7 +42,7 @@
                     <a href="">Все</a>
                 </li>
                 <li>
-                    <a href="">Веб-сайты</a>
+                    <a href="#vebsite" target="_blank">Веб-сайты</a>
                 </li>
                 <li>
                     <a href="">Приложения</a>
@@ -55,51 +60,53 @@
         <!-- Проекты -->
 
         <main>
+            <h2 hidden> Проекты</h2>
             <ul>
                 <li>
-                    <img src="./img/techno.jpg" alt="">
-                    <p>Технокряк</p>
-                    <a href="">Веб-сайт</a>
+                    <img src="./img/techno.jpg" alt="Фото работ">
+                    <h3 class="class">Технокряк</h3>
+                    <a href="" id="vebsite">Веб-сайт</a>
                 </li>
                 <li>
-                    <img src="./img/design.jpg" alt="">
-                    <p>Постер <span>New Orlean vs Golden Star</span></p>
+                    <img src="./img/design.jpg" alt="Фото работ">
+                    <h3 class="class">Постер<span lang="en">New Orlean vs Golden Star</span></h3>
                     <a href="">Дизайн</a>
                 </li>
                 <li>
-                    <img src="./img/seafood.jpg" alt="">
-                    <p>Ресторан<span>Seafood</span></p>
+                    <img src="./img/seafood.jpg" alt="Фото работ">
+                    <h3>Ресторан <span lang="en"> Seafood</span></h3>
                     <a href="">Приложение</a>
                 </li>
                 <li>
-                    <img src="./img/prime.jpg" alt="">
-                    <p>Проект Prime</p>
+                    <img src="./img/prime.jpg" alt="Фото работ">
+                    <h3>Проект <span lang="en"> Prime</span></h3>
                     <a href="">Маркетинг</a>
                 </li>
                 <li>
-                    <img src="./img/boxes.jpg" alt="">
-                    <p>Проект Boxes</p>
+                    <img src="./img/boxes.jpg" alt="Фото работ">
+                    <h3>Проект <span lang="en"> Boxes</span></h3>
                     <a href="">Приложение</a>
                 </li>
                 <li>
-                    <img src="/img/" alt="">
-                    <p>Технокряк</p>
-                    <a href="">Веб-сайт</a>
+                    <img src="./img/borders.jpg" alt="Фото работ">
+                    <h3><span lang="en">Inspiration has no Borders</span></h3>
+                    <a href="" id="vebsite">Веб-сайт</a>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <p>Технокряк</p>
-                    <a href="">Веб-сайт</a>
+                    <img src="./img/photoind.jpg" alt="Фото работ">
+                    <h3>Издание <span lang="en"> Limited Edition</span></h3>
+                    <a href="">Дизайн</a>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <p>Технокряк</p>
-                    <a href="">Веб-сайт</a>
+                    <img src="./img/design.jpg" alt="Фото работ">
+                    <h3>Проект LAB</h3>
+                    <a href="" id="vebsite">Веб-сайт</a>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <p>Технокряк</p>
-                    <a href="">Веб-сайт</a>
+                    <img src="./img/appendix.jpg" alt="Фото работ">
+                    <h3><span lang="en
+                    "> Growing Business</span></h3>
+                    <a href="" id="vebsite">Веб-сайт</a>
                 </li>
             </ul>
         </main>
