--- a/index.html
+++ b/index.html
@@ -8,54 +8,56 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
         <!-- Навигация -->
-    <header>
-    <nav>
-            <a href="./index.html"><span>WebStudio</span></a>
-       
+    <header class="header-page">
+    <nav class="page-nav">
+            <a class="link" href="./index.html">
+                <span class="logo">Web</span><span class="logo-studio">Studio</span></a>
 
-       <ul>
-            <li> <a href="./index.html">Студия</a></li>
-            <li> <a href="./portfolio.html" target="_blank">Портфолио</a></li>
-            <li> <a href="./Cotacts.html">Контакты</a></li>
+       <ul class="nav-list list">
+            <li class="nav-item link"><a class="link" href="./index.html">Студия</a></li>
+            <li class="nav-item link"><a class="link" href=".portfolio.html" target="_blank">Портфолио</a></li>
+            <li class="nav-item link"><a class="link" href=".Cotacts.html">Контакты</a></li>
        </ul>
        </nav>
 
-       <ul>
-           <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-           <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
+       <ul class="nav-adress list">
+           <li> <a class="link nav-adress-ithem" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+           <li> <a class="link nav-adress-ithem" href="tel:+380961111111">+38 096 111 11 11</a></li>
        </ul>
     </header>
     <!--Шапка  -->
-     <main>
+     <main class="hero">
         <section>
-            <h1>Эффективные решения <br> для вашего бизнеса</h1>
-            <button type="button">Заказать услугу </button>
+            <div class="backgraund-hero">
+            <h1 class="hero-all">Эффективные решения <br> для вашего бизнеса</h1>
+            <button type="button" class="button">Заказать услугу </button>
+            </div>
         </section>
 
         <!-- Особенности -->
-     <section>
-         <h2>Что мы умеем</h2>
-         <ul>
-             <li>
-                 <h3>Внимание к деталям</h3>
-                 <p> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+     <section class="about">
+         <h2 class="heading">Что мы умеем</h2>
+         <ul class="list-features list">
+             <li class="features-items text">
+                 <h3 class="head-list">Внимание к деталям</h3>
+                 <p class="text-list"> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
              </li>
-             <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+             <li class="features-items text">
+                <h3 class="head-list">Пунктуальность</h3>
+                <p class="text-list">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-            <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            <li class="features-items text">
+                <h3 class="head-list">Планирование</h3>
+                <p class="text-list">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
-            <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <li class="features-items text">
+                <h3 class="head-list">Современные технологии</h3>
+                <p class="text-list">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
 
         </ul>
@@ -63,9 +65,9 @@
      </section>
         <!-- Чем мы занимаемся  -->
      <section>
-         <h2 hidden>Чем мы занимаемся</h2>
+         <h2 hidden class="heading">Чем мы занимаемся</h2>
          
-         <ul>
+         <ul class="list">
              <li>
                 <img src="./img/portfol.jpg" alt="Фото работы" width="370">
              </li> 
@@ -81,27 +83,27 @@
      </section>
         <!-- Наша команда -->
      <section>
-         <h2>Наша команда</h2>
-         <ul>
+         <h2 class="heading">Наша команда</h2>
+         <ul class="list">
             <li>
                 <img src="img/igor.jpg" alt="Игор" width="270">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
+                <h3 class="head-list name">Игорь Демьяненко</h3>
+                <p class="text-list" lang="en">Product Designer</p>
             </li>
             <li>
                 <img src="img/lilu.jpg" alt="lilu" width="270">
-                <h3>Ольга Репина</h3>
-                <p lang="en">Frontend Developer</p>
+                <h3 class="head-list name">Ольга Репина</h3>
+                <p class="text-list" lang="en">Frontend Developer</p>
             </li>
             <li>
                 <img src="img/bob.jpg" alt="Коля" width="270">
-                <h3>Николай Тарасов</h3>
-                <p lang="en">Marketing</p>
+                <h3 class="head-list name">Николай Тарасов</h3>
+                <p class="text-list" lang="en">Marketing</p>
             </li>
             <li>
                 <img src="img/bil.jpg" alt="не коля" width="270">
-                <h3>Михаил Ермаков</h3>
-                <p lang="en">UI Designer</p>
+                <h3 class="head-list name">Михаил Ермаков</h3>
+                <p class="text-list" lang="en">UI Designer</p>
             </li>
 
          </ul>
@@ -109,19 +111,22 @@
 
     </main>
 
+    <div class="footer-backgraund">
+
      <footer>
-        <a href="./index.html">
-            <span>WebStudio</span>
+        <a class="link" href="/index.html">
+            <span class="logo">Web</span><span class="logo-studio-footer">Studio</span>
         </a>
         <address>
-          <ul>
-                <li><a href="https://goo.gl/maps/Gu5Dw9EAoeBzcQZ39">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="meilto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <ul class="list">
+                <li><a class="link ithem-adress" href="https://goo.gl/maps/Gu5Dw9EAoeBzcQZ39">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a class="link nav-adress-ithem" href="meilto:info@example.com">info@example.com</a></li>
+                <li><a class="link nav-adress-ithem" href="tel:+380991111111">+38 099 111 11 11</a></li>
           </ul>
  
         </address>
      </footer>
+    </div>
 
 
 
