--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
        <ul class="nav-list list">
             <li class="nav-item link"><a class="link" href="./index.html">Студия</a></li>
-            <li class="nav-item link"><a class="link" href="./portfolio.html">Портфолио</a></li>
+            <li class="nav-item link"><a class="link" href="./portfolio.html" target="_blank">Портфолио</a></li>
             <li class="nav-item link"><a class="link" href=".Cotacts.html">Контакты</a></li>
        </ul>
        </nav>
