--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
                     <p class="text-progects">Дизайн</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/design.jpg" alt="Фото работ" width="370">
+                    <img src="./img/Lab.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Проект LAB</h3>
                     <p class="text-progects">Маркетинг</p>
                 </li>
