--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <!-- Особенности -->
      <section class="about">
-         <h2 class="heading">Что мы умеем</h2>
+         <h2 hidden class="heading">Что мы умеем</h2>
          <ul class="list-features list">
              <li class="features-items text">
                  <h3 class="head-list">Внимание к деталям</h3>
@@ -117,8 +117,8 @@
         <a class="link" href="/index.html">
             <span class="logo">Web</span><span class="logo-studio-footer">Studio</span>
         </a>
-        <address>
-          <ul class="list">
+        <address class="text">
+          <ul class="list address-text">
                 <li><a class="link ithem-adress" href="https://goo.gl/maps/Gu5Dw9EAoeBzcQZ39">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a class="link nav-adress-ithem" href="meilto:info@example.com">info@example.com</a></li>
                 <li><a class="link nav-adress-ithem" href="tel:+380991111111">+38 099 111 11 11</a></li>
