--- a/portfolio.html
+++ b/portfolio.html
@@ -103,8 +103,8 @@
             <a class="link" href="/index.html">
                 <span class="logo">Web</span><span class="logo-studio-footer">Studio</span>
             </a>
-            <address>
-                <ul class="list">
+            <address class="text">
+                <ul class="list address-text">
                     <li><a class="link ithem-adress" href="https://goo.gl/maps/Gu5Dw9EAoeBzcQZ39">г. Киев, пр-т Леси
                             Украинки, 26</a></li>
                     <li><a class="link nav-adress-ithem" href="meilto:info@example.com">info@example.com</a></li>
