--- a/portfolio.html
+++ b/portfolio.html
@@ -50,32 +50,32 @@
             <h2 hidden class="progects"> Проекты</h2>
             <ul class="type-progects list">
                 <li class="list-progects">
-                    <img src="./img/techno.jpg" alt="Фото работ" width="370">
+                    <img src="./img/tech.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Технокряк</h3>
                     <p class="text-progects">Веб-сайт</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/design.jpg" alt="Фото работ" width="370">
+                    <img src="./img/des.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                     <p class="text-progects">Дизайн</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/seafood.jpg" alt="Фото работ" width="370">
+                    <img src="./img/seaf.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Ресторан <span lang="en"> Seafood</span></h3>
                 <p class="text-progects">Приложение</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/prime.jpg" alt="Фото работ" width="370">
+                    <img src="./img/prim.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Проект <span lang="en"> Prime</span></h3>
                     <p class="text-progects">Маркетинг</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/boxes.jpg" alt="Фото работ" width="370">
+                    <img src="./img/boxe.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Проект <span lang="en"> Boxes</span></h3>
                     <p class="text-progects">Приложение</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/borders.jpg" alt="Фото работ" width="370">
+                    <img src="./img/bord.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects"><span lang="en">Inspiration has no Borders</span></h3>
                     <p class="text-progects">Веб-сайт</p>
                 </li>
