--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
             <h2 hidden class="progects"> Проекты</h2>
             <ul class="type-progects list">
                 <li class="list-progects">
-                    <img src="./img/tech.jpg" alt="Фото работ" width="370">
+                    <img src="./imeges/" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Технокряк</h3>
                     <p class="text-progects">Веб-сайт</p>
                 </li>
