--- a/portfolio.html
+++ b/portfolio.html
@@ -50,47 +50,47 @@
             <h2 hidden class="progects"> Проекты</h2>
             <ul class="type-progects list">
                 <li class="list-progects">
-                    <img src="./imeges/" alt="Фото работ" width="370">
+                    <img src="./imeges/tech.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Технокряк</h3>
                     <p class="text-progects">Веб-сайт</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/des.jpg" alt="Фото работ" width="370">
+                    <img src="./imeges/des.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                     <p class="text-progects">Дизайн</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/seaf.jpg" alt="Фото работ" width="370">
+                    <img src="./imeges/seaf.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Ресторан <span lang="en"> Seafood</span></h3>
                 <p class="text-progects">Приложение</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/prim.jpg" alt="Фото работ" width="370">
+                    <img src="./imeges/prim.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Проект <span lang="en"> Prime</span></h3>
                     <p class="text-progects">Маркетинг</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/boxe.jpg" alt="Фото работ" width="370">
+                    <img src="./imeges/boxe.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Проект <span lang="en"> Boxes</span></h3>
                     <p class="text-progects">Приложение</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/bord.jpg" alt="Фото работ" width="370">
+                    <img src="./imeges/bord.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects"><span lang="en">Inspiration has no Borders</span></h3>
                     <p class="text-progects">Веб-сайт</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/photoind.jpg" alt="Фото работ" width="370">
+                    <img src="./imeges/photoind.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Издание <span lang="en"> Limited Edition</span></h3>
                     <p class="text-progects">Дизайн</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/Lab.jpg" alt="Фото работ" width="370">
+                    <img src="./imeges/Lab.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects">Проект LAB</h3>
                     <p class="text-progects">Маркетинг</p>
                 </li>
                 <li class="list-progects">
-                    <img src="./img/appendix.jpg" alt="Фото работ" width="370">
+                    <img src="./imeges/append.jpg" alt="Фото работ" width="370">
                     <h3 class="ithem-progects"><span lang="en"> Growing Business</span></h3>
                     <p class="text-progects">Приложение</p>
                 </li>
