--- a/index.html
+++ b/index.html
@@ -86,22 +86,22 @@
          <h2 class="heading">Наша команда</h2>
          <ul class="list">
             <li>
-                <img src="imeges/igor.jpg" alt="Игор" width="270">
+                <img src="./imeges/igor.jpg" alt="Игор" width="270">
                 <h3 class="head-list name">Игорь Демьяненко</h3>
                 <p class="text-list" lang="en">Product Designer</p>
             </li>
             <li>
-                <img src="imeges/lilu.jpg" alt="lilu" width="270">
+                <img src="./imeges/lilu.jpg" alt="lilu" width="270">
                 <h3 class="head-list name">Ольга Репина</h3>
                 <p class="text-list" lang="en">Frontend Developer</p>
             </li>
             <li>
-                <img src="imeges/bob.jpg" alt="Коля" width="270">
+                <img src="./imeges/bob.jpg" alt="Коля" width="270">
                 <h3 class="head-list name">Николай Тарасов</h3>
                 <p class="text-list" lang="en">Marketing</p>
             </li>
             <li>
-                <img src="img/bil.jpg" alt="не коля" width="270">
+                <img src="./imeges/bil.jpg" alt="не коля" width="270">
                 <h3 class="head-list name">Михаил Ермаков</h3>
                 <p class="text-list" lang="en">UI Designer</p>
             </li>
