--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
      </section>
         <!-- Чем мы занимаемся  -->
      <section>
-         <h2 hidden class="heading">Чем мы занимаемся</h2>
+         <h2 class="heading">Чем мы занимаемся</h2>
          
          <ul class="list">
              <li>
