--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     
                 <ul class="nav-list list">
                     <li class="nav-item link"><a class="link" href="./index.html">Студия</a></li>
-                    <li class="nav-item link"><a class="link" href=".portfolio.html" target="_blank">Портфолио</a></li>
+                    <li class="nav-item link"><a class="link current" href=".portfolio.html" target="_blank">Портфолио</a></li>
                     <li class="nav-item link"><a class="link" href=".Cotacts.html">Контакты</a></li>
                 </ul>
         </nav>
