--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <span class="logo">Web</span><span class="logo-studio">Studio</span></a>
 
        <ul class="nav-list list">
-            <li class="nav-item link"><a class="link" href="./index.html">Студия</a></li>
+            <li class="nav-item link"><a class="link current" href="./index.html">Студия</a></li>
             <li class="nav-item link"><a class="link" href="./portfolio.html" target="_blank">Портфолио</a></li>
             <li class="nav-item link"><a class="link" href=".Cotacts.html">Контакты</a></li>
        </ul>
