--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
         <!-- Навигация -->
     <header class="header-page">
+        <div class="conteiner">
     <nav class="page-nav">
             <a class="link" href="./index.html">
                 <span class="logo">Web</span><span class="logo-studio">Studio</span></a>
@@ -29,6 +30,7 @@
            <li> <a class="link nav-adress-ithem" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
            <li> <a class="link nav-adress-ithem" href="tel:+380961111111">+38 096 111 11 11</a></li>
        </ul>
+    </div>
     </header>
     <!--Шапка  -->
      <main class="hero">
